--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+### C++ ###
+
 # Compiled Object files
 *.slo
 *.lo
@@ -26,3 +28,28 @@
 *.exe
 *.out
 *.app
+
+### Linux ###
+
+*~
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# Swap and other temporary files
+*.swp
+*-swp
+*.swo
+*.hr3.*
+*.user
+*.autosave
+
+# QtCreator files
+*.creator
+*.creator.user
+*.files
+*.includes
+*.config
