Added empty base classes for Firefighter and Arsonist

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ CC = g++
 CFLAGS = -Wall -Wextra -Werror -std=c++11 -O3
 
 TARGET = so2
-SOURCE = Main.cpp
+SOURCE = Main.cpp Arsonist.cpp Firefighter.cpp
 
 all: $(TARGET)
 $(TARGET): $(SOURCE)
