--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
-CC = g++
-CFLAGS = -Wall -Wextra -Werror -std=c++11 -O3
+CC = clang++
+CFLAGS = -Wall -Wextra -Werror -std=c++11 -stdlib=libc++ -lc++abi -O3
 
 TARGET = so2
 SOURCE = Main.cpp Arsonist.cpp Firefighter.cpp
