Working starting threads

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 CC = clang++
-CFLAGS = -Wall -Wextra -std=c++11 -pthread -stdlib=libc++ -lc++abi -O3
+CFLAGS = -Wall -Wextra -std=c++11 -pthread -stdlib=libc++ -lc++abi -lcurses
 
 TARGET = so2
-SOURCE = Main.cpp FireSimulator.cpp Arsonist.cpp Firefighter.cpp House.cpp OutputWindow.cpp
+SOURCE = Main.cpp FireSimulator.cpp Arsonist.cpp Firefighter.cpp House.cpp Playground.cpp OutputWindow.cpp
 
 all: $(TARGET)
 $(TARGET): $(SOURCE)
