--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ CC = clang++
 CFLAGS = -Wall -Wextra -std=c++11 -pthread -stdlib=libc++ -lc++abi -lcurses
 
 TARGET = so2
-SOURCE = Main.cpp FireSimulator.cpp Arsonist.cpp Firefighter.cpp House.cpp Playground.cpp OutputWindow.cpp
+SOURCE = Main.cpp Person.cpp Arsonist.cpp Firefighter.cpp FireSimulator.cpp  House.cpp Playground.cpp OutputWindow.cpp
 
 all: $(TARGET)
 $(TARGET): $(SOURCE)
