Added a vector of tuples of tasks. Now its possible to end chosen task by kill method

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 CC = clang++
-CFLAGS = -Wall -Wextra -std=c++11 -pthread -stdlib=libc++ -lc++abi -lcurses
+CFLAGS = -Wall -Wextra -std=c++11 -pthread -stdlib=libc++ -lc++abi -lncurses
 
 TARGET = so2
 SOURCE = Main.cpp Person.cpp Arsonist.cpp Firefighter.cpp FireSimulator.cpp  House.cpp Playground.cpp OutputWindow.cpp
